force-app/main/default/objects/CSBD_QueryDinamica__c/CSBD_QueryDinamica__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Query dinamica</label>
</CustomObject>