force-app/main/default/objects/CSBD_QueryDinamica__c/fields/CSBD_FieldCondition__c.field-meta.xml
<CustomField>
    <fullName>CSBD_FieldCondition__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FieldCondition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>