force-app/main/default/objects/CSBD_QueryDinamica__c/fields/CSBD_TipoBatch__c.field-meta.xml
<CustomField>
    <fullName>CSBD_TipoBatch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tipo Batch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>